[package]
name = "uptobox-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json", "stream"] }
regex = "1.5.6"
futures-util = "0.3.21"
indicatif = "0.16.2"
clap = { version = "3.1.18", features = ["derive"] }